; ModuleID = '/home/carl/AnghaBench/Cello/benchmarks/ext/extr_regexp9.c_nextc.c'
source_filename = "/home/carl/AnghaBench/Cello/benchmarks/ext/extr_regexp9.c_nextc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lexdone = common dso_local global i32 0, align 4
@exprp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @nextc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nextc(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i32, i32* @lexdone, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i8*, i8** %3, align 8
  store i8 0, i8* %7, align 1
  store i32 1, i32* %2, align 4
  br label %35

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = load i32, i32* @exprp, align 4
  %11 = call i64 @chartorune(i8* %9, i32 %10)
  %12 = load i32, i32* @exprp, align 4
  %13 = sext i32 %12 to i64
  %14 = add nsw i64 %13, %11
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* @exprp, align 4
  %16 = load i8*, i8** %3, align 8
  %17 = load i8, i8* %16, align 1
  %18 = sext i8 %17 to i32
  %19 = icmp eq i32 %18, 92
  br i1 %19, label %20, label %28

20:                                               ; preds = %8
  %21 = load i8*, i8** %3, align 8
  %22 = load i32, i32* @exprp, align 4
  %23 = call i64 @chartorune(i8* %21, i32 %22)
  %24 = load i32, i32* @exprp, align 4
  %25 = sext i32 %24 to i64
  %26 = add nsw i64 %25, %23
  %27 = trunc i64 %26 to i32
  store i32 %27, i32* @exprp, align 4
  store i32 1, i32* %2, align 4
  br label %35

28:                                               ; preds = %8
  %29 = load i8*, i8** %3, align 8
  %30 = load i8, i8* %29, align 1
  %31 = sext i8 %30 to i32
  %32 = icmp eq i32 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %28
  store i32 1, i32* @lexdone, align 4
  br label %34

34:                                               ; preds = %33, %28
  store i32 0, i32* %2, align 4
  br label %35

35:                                               ; preds = %34, %20, %6
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i64 @chartorune(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
